# Task1SPLAB

LAB1/Task0/: input  makefile2  ohad  output  task0  task0.c  task1a  task1b  task1c  task1d  task2
LAB1/Task1a/: makefile1a  task1a.c
LAB1/Task1b/: task1b.c
LAB1/Task1c/: makefile1c  task1c.c
LAB1/Task1d/: makefile1d  task1d.c
LAB1/Task2/: makefile2true.make  task2.c
LAB2/Task0/: count-words
LAB2/Task1/: addresses  addresses.c  task1c  task1c.c  task1d  task1d.c
LAB2/Task1/Task2/: task2.c
LAB2/Task3/: task1c.c  task1d.c  task3  task3.c
LAB3/Task0/: Task01  Task01.c  lab3_bubblesort.c  label  newTask
LAB3/Task1/: signatures.txt  task1a.c  task1b  task1b.c  task1c  task1c.c
LAB3/Task2/: infected.txt  task2b.c
LAB4/Task0/: greeting.txt  main.c  makefile  task0
LAB4/Task1/: makefile  task1  task1.c
LAB4/Task2/Task2a/: makefile  task2a  task2a.c
LAB4/Task2/Task2b/: makefile  task2b  task2b.c
LAB5/Task1/: looper.c  makefile  myshell.c
LAB5/Task2/: CMakeLists.txt  makefile  myshell.c  myshellTask2.c
LAB6/Task0/: CMakeLists.txt  in.txt  main  main.c
LAB6/Task1/: in.txt  myshell.c
LAB6/Task2/: CMakeLists.txt  main  main.c  makefile
LAB6/Task3/: CMakeLists.txt  myshell.c
LAB6/Task4/: myshell.c
LAB8/: CMakeLists.txt
LAB8/TASK0/: main.c  makefile
LAB8/TASK1/: main.c
LAB8/TASK3A/: main.c
LAB8/TASK3B/: main.c
LAB9/: CMakeLists.txt  main.c
Lab8/: newElf.c
